// Copyright (C) 2020 THL A29 Limited, a Tencent company. All rights reserved.
//
// Licensed under the BSD 3-Clause License (the "License"); you may not use this
// file except in compliance with the License. You may obtain a copy of the
// License at
//
// https://opensource.org/licenses/BSD-3-Clause
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations under
// the License.

syntax = "proto3";

package yadcc;

// Describes a compilation environment.
message EnvironmentDesc {
  // Human readable string, for exposition purpose only.
  //
  // This field is not used when matching environments.
  //
  // string name = 2;

  // BLAKE-3 checksum of compiler binary. Hex encoded. Lowercase.
  string compiler_digest = 1;

  // I'm not sure if we want anything else. `compiler_digest` should be able to
  // uniquely identify:
  //
  // - ISA: It's highly unlikely that compiler for x86-64 / AAch64 is the same
  //   binary. (Let's not take Apple / Microsoft's universal binary into
  //   consideration for now. We're Linux only anyway.)
  //
  // - Compiler version: As obvious.
  //
  // Indeed this can't tell the differences between different kernel version /
  // Linux distribution version, but does that really affects how compiler
  // generates code in general (except for things such as `-march=native`)?
}
